# bandcamp-library-sync

./: README.md  flake.nix  pyproject.toml
src/bandcamp_library_sync/: bandcamp.py  cli.py  config.py  models.py  sync.py
